--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     "require": {
         "php": "^7.4",
         "avto-dev/app-version-laravel": "^3.2",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "nunomaduro/phpinsights": "dev-master",
-        "orchestra/testbench": "~5|~6",
+        "orchestra/testbench": "~5 || ~6",
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
