--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,13 @@
         "ribbon"
     ],
     "require": {
-        "php": "^7.4",
-        "avto-dev/app-version-laravel": "^3.2",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0"
+        "php": ">=7.4",
+        "avto-dev/app-version-laravel": "^3.6"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "nunomaduro/phpinsights": "dev-master",
-        "orchestra/testbench": "~5 || ~6",
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
